Bug 248789 - Saving empty event fails without proper message
Summary: Saving empty event fails without proper message
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-23 12:03 UTC by Felix Wolfsteller
Modified: 2010-10-13 16:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-08-23 12:03:36 UTC
Version:           unspecified
OS:                Linux

When touching "New Appointment" and immediately "OK" afterwards, an error message is shown that reads:

"Saving the event failed.
Reason: [OK]"

Attached to the Reason box is a strange little grey block. The box is not aligned with the OK button.

Reproducible: Always
Comment 1 Felix Wolfsteller 2010-08-23 12:04:31 UTC
(Version 20100813.1163254-1maemo1.1164259)
Comment 2 Bertjan Broeksema 2010-10-06 16:27:23 UTC
SVN commit 1183210 by bbroeksema:

Validate before saving to avoid bogus messages.

BUG: 248789


 M  +2 -0      incidenceview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1183210
Comment 3 Felix Wolfsteller 2010-10-08 12:09:58 UTC
Confirming fix, version 4:4.5~20101008.1183623-1maemo1.1182955 .