Validate before saving to avoid bogus messages.

BUG: 248789

svn path=/trunk/KDE/kdepim/mobile/; revision=1183210